--- a/src/README
+++ b/src/README
@@ -3,7 +3,7 @@ Random Boolean games
 
 The Random Boolean games library for the Coq proof assistant provides a formalisation of Boolean games with random formulas as payoff functions.
 
-It has been tested with Coq 8.6, MathComp 1.6.1 and Infotheo (as of 2017-01-06).
+It has been tested with Coq 8.8.0, MathComp 1.7.0, and Infotheo ae83217.
 
 Installation instructions
 -------------------------
@@ -15,14 +15,14 @@ https://math-comp.github.io/math-comp).
 
 Once OPAM is installed, type
     $ opam repo add coq-released https://coq.inria.fr/opam/released
-    $ opam install coq.8.6 coq-mathcomp-ssreflect.1.6.1 coq-mathcomp-algebra coq-mathcomp-field
+    $ opam install coq.8.8.0 coq-mathcomp-character.1.7.0
 
-When this installation step is completed, download
-http://staff.aist.go.jp/reynald.affeldt/shannon/infotheo.tar.gz
-then "untar" the archive, "cd" into the infotheo folder, and type
-    $ coq_makefile -f MakeInfotheo_v1 -o Makefile && make -j2 && make install
+When this installation step is completed, compile and install Infotheo
+from the external directory:
+    $ cd external/infotheo
+    $ coq_makefile -f _CoqProject -o Makefile && make -j2 && make install
 
-Lastly, "cd" into the directory that contains this README and type
+Lastly, go to the src directory (which contains this README) and type:
     $ ./configure && make -j2
 
 Documentation
